switching to contained statement everywhere